# algo-cheatsheet

./: README.md
Exercises/: 3Sum-Closest.py  3Sum.py  Amazon-real-OA.py  BFS-list.py  Cloesest-Seat.py  Container-With-Most-Water.py  Integer-to-Roman.py  Jump-Game.py  Knapstack.py  Letter-Combinations-of-a-Phone-Number.py  Longest-Palindromic-Substring.py  Longest-Univalue-Path.py  Matrix-Block-Sum.py  Min-Knight-Moves.py  Num-Rolls-To-Target.py  Palindrom-Number.py  Regular-Expression-Matching.py  Reverse-Integer.py  String-to-Integer.py  Wild-Card-Matching.py  ZigZag-Conversion.py
python/: conversion.py  dfs.py  dict.py  list.py  roots-of-unity.py  set.py  thread.py
rust/: ModPow.rs  casting_number.rs  closure-universalCall  closure-universalCall.rs  const-static-attributes  const-static-attributes.rs  macro  macro-basics  macro-basics.rs  macro-more  macro-more.rs  radix3FFT  radix3FFT.rs  readInput-bitReverse  readInput-bitReverse.rs  ta  ta.rs  test-anything  test_anything  thread  thread.rs  trait  trait-dispatch-generic.rs  trait-size-copy&clone.rs  trait2
rust/bench_testing/: Cargo.toml
rust/bench_testing/benches/: benchmark.rs  output.txt
rust/bench_testing/src/: lib.rs  main.rs
rust/test-stuffs-cargo/: Cargo.toml
rust/test-stuffs-cargo/src/: main.rs
