[package]
name = "bench_testing"
version = "0.1.0"
authors = ["CeciliaZ030 <CeciliaZ030@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
hex = "0.3.1"


[[bench]]
name = "benchmark"
harness = false
# 用这个包会在benches中找”benchmark.rs"文件
